Fixes z-index positioning issues

--- a/app/assets/stylesheets/sass/forums.sass
+++ b/app/assets/stylesheets/sass/forums.sass
@@ -2,6 +2,8 @@
 
 div
   &#indexForums
+    position: relative
+    z-index: 1000
     width: 940px
     padding-bottom: 5px
     margin: 0 auto 0 auto
